--- a/08-HTML/homework/styles.css
+++ b/08-HTML/homework/styles.css
@@ -1,11 +1,13 @@
 h1{color:firebrick}
             
 
-img{width: 400px;}
+img{width: 320px;
+height: 235;
+}
 
 #thirdDiv{ 
-    height: 600px;
-    width: 500px;
+    height: 450px;
+    width: 450px;
     background-color: blueviolet;
     padding:50px ;
     border: 5px solid blue;
